대시보드 > 소비분석 화면 추가
- 대시보드에서 사용할 공통 차트 추가

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "2",
     "core-js": "^3.6.5",
     "sass-loader": "7.1.0",
     "vee-validate": "<3.0.0",
     "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
     "vue-cookies": "^1.7.4",
     "vue-feather-icons": "^5.1.0",
     "vue-moment": "^4.1.0",
